--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
+    "@shopify/flash-list": "^1.3.0",
     "@types/react-native-sqlite-storage": "^5.0.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
